Correct the math behind alignfull image size + position
Width: 125% + 88px of container margins +  28px of block margins

Position: 12.5% (10% of 125) - 46px of container  margins - 14px of block margins.

--- a/style-editor-frame.scss
+++ b/style-editor-frame.scss
@@ -51,9 +51,9 @@ body.gutenberg-editor-page .gutenberg .edit-post-layout {
 		}
 
 		.editor-block-list__block[data-align="full"] {
-			width: 136%;
+			width: calc( 125% + 88px + 28px );
 			position: relative;
-			left: -18%;
+			left: calc( -12.5% - 46px - 14px );
 		}
 	}
 }
